# aa-pap-stats

./: .coveragerc  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  README2.md  package-lock.json  package.json  pyproject.toml  tox.ini
papstats/: __init__.py  app_settings.py  apps.py  auth_hooks.py  forms.py  models.py  plotly.py  tasks.py  urls.py  utils.py  views.py
papstats/management/commands/: aggregate_stats.py  clear_monthly_data.py
papstats/migrations/: 0001_initial.py  0002_csvcolumnmapping_ignoredcsvcolumns_monthlyfleettype_and_more.py  0003_alter_papstats_options.py
papstats/static/papstats/css/: papstats.css
papstats/templates/aa_base_plugin/: base.html  index.html
papstats/templates/papstats/: admin.html  alliance.html  alliance_data.html  base.html  corporation.html  corporation_data.html  fc.html  fc_data.html
papstats/templates/papstats/bundles/: helper-js.html  htmx.html
papstats/templates/papstats/partials/: month_navigation.html  spinner.html  top_menu.html
papstats/templatetags/: form_filters.py  papstats.py
papstats/views/: alliance.py  corporation.py  fc.py  main.py
testauth/: celery.py
testauth/settings/: local.py
